<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.ChangePasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_oldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Current password"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/dark_gold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_oldPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_newPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New password"
        app:endIconMode="password_toggle"
        android:layout_margin="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/confirm_password_requirements"
        app:hintTextColor="@color/dark_gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_oldPassword"
        app:layout_constraintVertical_bias="0.028">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_newPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_confirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm password"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperText="@string/confirm_password_requirements"
        app:hintTextColor="@color/dark_gold"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_newPassword"
        app:layout_constraintVertical_bias="0.028"
>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_confirmPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/changePw_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="28dp"
        android:text="Confirm new password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_confirmPassword" />

    <Button
        android:id="@+id/changePw_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/flax"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toEndOf="@id/changePw_btn"
        app:layout_constraintTop_toBottomOf="@id/account_confirmPassword"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>