<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/drawerNav_layout">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerNav_accountFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="Account" />
        <item
            android:id="@+id/drawerNav_deviceList"
            android:icon="@drawable/ic_baseline_sensors_24"
            android:title="Devices" />
        <item
            android:id="@+id/drawerNav_petList"
            android:icon="@drawable/baseline_pets_24"
            android:title="Pets" />
        <item
            android:id="@+id/drawerNav_petGroupListFragment"
            android:icon="@drawable/baseline_list_24"
            android:title="Pet groups" />

        <item
            android:id="@+id/drawerNav_zoneList"
            android:icon="@drawable/ic_baseline_timeline_24"
            android:title="Zones" />
        <item
            android:id="@+id/drawerNav_eventList"
            android:icon="@drawable/baseline_notifications_24"
            android:title="Events" />
        <item
            android:id="@+id/drawerNav_userList"
            android:icon="@drawable/baseline_people_24"
            android:title="Users" />
    </group>
</menu>